2004-05-03  JP Rosevear  <jpr@ximian.com>

	Fixes #57899
	
	* gui/e-day-view.c (e_day_view_do_key_press): bail if the client
	is read only (or we get an error trying to find out)

	* gui/e-week-view.c (e_week_view_do_key_press): ditto
	
2004-05-03  JP Rosevear  <jpr@ximian.com>

	Fixes #57894
	
	* gui/gnome-cal.c (gnome_calendar_new_task): make sure we use the
	default component of the correct model

2004-04-30  Rodney Dawes  <dobey@ximian.com>

	* gui/alarm-notify/alarm-notify-dialog.c (alarm_notify_dialog):
	* gui/alarm-notify/alarm-notify.glade:
	Update the alarm notify dialog to be HIG compliant

	Fixes #41224

2004-04-30  Gary Ekker  <gekker@novell.com>

	* gui/e-tasks.c: (e_tasks_init): Set up the model to use the correct 
	query. Setup callbacks for gconf changes. Add an idle timeout to hide 
	completed items.
	Add update_view, update_view_cb, and 
	config_hide_completed_tasks_changed_cb to update the model view.

	* gui/gnome-cal.c: ditto
	
	* gui/calendar-config.h: Add notifications for hide_completed_tasks
	settings.

	* gui/calendar-config.c: ditto

2004-04-30  Not Zed  <NotZed@Ximian.com>

	* gui/dialogs/meeting-page.c (get_widgets): make the entry
	non-editable.  Quick fix for #48132 (could convert to optionmenu
	but then we need to change again for gnome >?2.6).

2004-04-29  Rodney Dawes  <dobey@ximian.com>

	* gui/dialogs/cal-prefs-dialog.glade: Update the prefs dialog pages
	for the calendar and tasks components to be HIG compliant

2004-04-29  JP Rosevear  <jpr@ximian.com>

	* gui/tasks-component.h (tasks_component_peek_source_list): remove
	prototypes

	* gui/tasks-component.c (source_removed_cb):  unselect the
	source in the selector if source removed from calendar
	(create_component_view): create the activity handler and listen to
	source remove signal

	* gui/gnome-cal.h: add signals, protos

	* gui/gnome-cal.c (gnome_calendar_class_init): add source added
	and removed signals
	(client_cal_opened_cb): emit source removed signal